--- a/curriculo.css
+++ b/curriculo.css
@@ -10,15 +10,16 @@ body{
 body h1{
     width: 100%;
     margin-top: -0.5%;
-    background-color: #0040FF;
 }
 
 .dados label{
     font-size: 120%;
     font-weight: bold;
+    color: black;
 }
 .dados p{
     font-style: oblique;
+    color:black;
 }   
 body h1{
     text-align: center;
@@ -82,6 +83,79 @@ body img{
     height: 20%;
     border-radius: 50%;
 }
+.button{
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+        display: inline-block;
+        margin-bottom: 0;
+        font-weight: 400;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
+        cursor: p   ointer;
+        background-image: none;
+        border: 1px solid transparent;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.42857143;
+        border-radius: 4px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        margin-top: 2%;
+}
+.form{
+    padding: 8px;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 80%;
+    border-radius: 14px;
+}
+.resultados{
+    margin-top:1%;
+    border-radius: 20px 20px;
+    background-color:#fff;
+    width: 50%;
+    text-align: left;
+    margin-top: 10%;
+    font-size: 200%;
+}
+.resultados1{
+    border-radius: 20px 20px;
+    background-color:#fff;
+    width: 50%;
+    text-align: left;
+    margin-top: 2%;
+    font-size: 200%;
+}
+.comentarios{
+ width: 100%;
+ margin-left: 15%;
+}
+.comentarios button{
+    float: left;
+}
+
+.resultados img{
+    margin-left: 100%;
+    height: 10%;
+}
+.resultados1 img{
+    margin-left: 100%;
+    height: 10%;
+}
+.comentarios label{
+    text-align: left;
+    margin-top: 5%;
+    font-size: 150%;
+    float: right;
+    margin-right: 90%;
+}
 @media only screen and (max-width:600px){
     body img{
         width: 40%;
@@ -92,6 +166,20 @@ body img{
         width: 100%;
         margin-top:5%;
         margin-left: 15%;
+    }
+    .comentarios{
+        width: 100%;
+    }
+    .resultados{
+        margin-top: 20%;
+        width: 70%;
+    }
+    .resultados1{
+        margin-top: 20%;
+        width: 70%;
+    }
+    .comentarios label{
+        margin-right: 65%;
     }
         
 }
